# lan-nanny2

./: .gitignore  README.md  Taskfile.yaml  VERSION  pyproject.toml
src/: flake8  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
src/lan_nanny/: debug.py
src/lan_nanny/api/: api-app.py  version.py  version.py.bak  web-app.py  web-app.py2
src/lan_nanny/api/collects/: api_keys.py  auto_features.py  base.py  base_entity_metas.py  bookmark_tags.py  bookmark_tracks.py  bookmarks.py  device_macs.py  device_ports.py  devices.py  directories.py  options.py  roles.py  scan_hosts.py  scan_ports.py  tags.py  users.py  vendors.py
src/lan_nanny/api/controllers/: ctrl_image.py  ctrl_index.py  ctrl_inter_ops.py  ctrl_scan.py  ctrl_scan_submit.py  ctrl_search.py  ctrl_stats.py
src/lan_nanny/api/models/: api_key.py  auto_feature.py  base.py  base_entity_meta.py  bookmark.py  bookmark_tag.py  bookmark_track.py  device.py  device_mac.py  device_port.py  directory.py  entity_meta.py  migration.py  option.py  perm.py  role.py  role_perm.py  scan.py  scan_host.py  scan_host_result.py  scan_port.py  scan_result.py  tag.py  user.py  vendor.py
src/lan_nanny/api/stats/: entity_stats.py
src/lan_nanny/api/utils/: api_util.py  auth.py  auto_features.py  db.py  export.py  glow.py  handle_host_scan.py  handle_port_scan.py  handle_scan.py  (+3 more)
src/lan_nanny/cli/: __init__.py
src/lan_nanny/client/: __init__.py  lan_nanny_client.py
src/lan_nanny/introspect/: scan.py
src/lan_nanny/migrations/: create-user.py  migrate.py
src/lan_nanny/scanner/: scan.py
src/lan_nanny/web/: web-app.py
(+143 files in other folders)
