[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lan_nanny"
version = "0.0.0.17"

requires-python = ">=3.11"
dependencies = [
    "gunicorn>=22.0.0",
    "Flask>=3.0.3",
    "psycopg2==2.9.9",
    "PyJWT==2.8.0",
    "sqlescapy==1.0.1",
    
    # Scan Dependencaies
    "requests==2.32.3",
    "lxml==5.3.0",
    "bs4==0.0.2",

]

[tool.hatch.build.targets.sdist]
include = [
  "lan_nanny/api/*.py",
  "lan_nanny/api/collects/*.py",
  "lan_nanny/api/controllers/*.py",
  "lan_nanny/api/controllers/models/*.py",
  "lan_nanny/api/models/*.py",
  "lan_nanny/api/utils/*.py",
  "lan_nanny/migrations/*",
  "lan_nanny/shared/*",
  "lan_nanny/scanners/*",
]
# exclude = [
#   "*.json",
#   "pkg/_compat.py",
# ]
